[web] fix image avatar image being stretched
Summary: As I was working on enabling avatars on `web`, I noticed that the image avatars were slightly stretched. This diff fixes this issue

Test Plan: Please see the screenshots below to see the changes I made

Subscribers: ashoat, tomek, atul

Differential Revision: https://phab.comm.dev/D7639

--- a/web/components/avatar.css
+++ b/web/components/avatar.css
@@ -55,3 +55,7 @@
   width: 112px;
   min-width: 112px;
 }
+
+.imgContainer {
+  object-fit: cover;
+}
